<resources>
    <string name="app_name">Panda Portions</string>
    <string name="prompt_name">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="prompt_search">Search Address</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Panda Portions</string>
    <string name="nav_header_title_cap">PANDA PORTIONS</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_home">Home</string>
    <string name="menu_locations">Panda Locations</string>
    <string name="menu_map">Map</string>
    <string name="menu_signout">Sign out</string>
    <string name="menu_settings">Settings</string>

    <string name="title_activity_maps">Maps</string>
</resources>